# discourse-reader

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
discourse_reader/: __init__.py  _posts.py  _topics.py  client.py  models.py
