[project]
name = "discourse-reader"
version = "0.1.0"
description = "A simple Python wrapper for reading Discourse forums"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Mauk Muller", email = "mauk@elnino.tech" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0",
    "ruff>=0.15",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
